crates/java-syntax/tests/snapshots/parser_events__parse_class_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
public class A<A, B> {}

TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "A"
COMMA ","
WHITESPACE " "
IDENTIFIER "B"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
AddToken
FinishNode
AddToken
AddToken
StartNode(TYPE_PARAMETERS, forward_parent=None)
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
FinishNode
StartNode(CLASS_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
