crates/java-syntax/tests/snapshots/parser_events__parse_interface_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
public interface A<T, U> {}

TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(INTERFACE_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
AddToken
FinishNode
AddToken
AddToken
StartNode(TYPE_PARAMETERS, forward_parent=None)
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
FinishNode
StartNode(INTERFACE_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
