crates/java-syntax/tests/snapshots/parser_events__parse_method_return_type_with_arguments.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
class A { List<String> f() {} }

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "List"
LESS "<"
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(METHOD_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
StartNode(TYPE, forward_parent=None)
AddToken
StartNode(TYPE_ARGUMENTS, forward_parent=None)
AddToken
StartNode(TYPE_ARGUMENT, forward_parent=None)
StartNode(TYPE, forward_parent=None)
AddToken
Tombstone
FinishNode
FinishNode
AddToken
FinishNode
Tombstone
FinishNode
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
AddToken
FinishNode
StartNode(BLOCK, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
