crates/java-syntax/tests/snapshots/parser_events__parse_record_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
public record R<T, U>(T x, U y) {}

TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
L_PAREN "("
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "x"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
WHITESPACE " "
IDENTIFIER "y"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(RECORD_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
AddToken
FinishNode
AddToken
AddToken
StartNode(TYPE_PARAMETERS, forward_parent=None)
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
FinishNode
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
StartNode(FORMAL_PARAMETER, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
Tombstone
FinishNode
AddToken
FinishNode
AddToken
StartNode(FORMAL_PARAMETER, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
StartNode(TYPE, forward_parent=None)
StartNode(QUALIFIED_NAME, forward_parent=None)
AddToken
FinishNode
Tombstone
FinishNode
AddToken
FinishNode
AddToken
FinishNode
StartNode(RECORD_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
